# halt

./: Makefile  halt.cabal  liftplugin.cabal  rehip.cabal  wishlist
src/: Main.hs
src/Halt/FOL/: Abstract.hs  Operations.hs  Rename.hs  Style.hs
src/Halt/FOL/Internals/: Internals.hs
