name:               rehip
version:            0.1
author:             Dan Rosén
maintainer:         danr@student.gu.se
synopsis:           Haskell Inductive Prover fuelled by GHC Core
category:           Proving
stability:          Experimental
cabal-version:      >= 1.6
build-type:         Simple
homepage:           github.com/danr/hip

executable          rehip
    ghc-options:    -threaded -O2 -rtsopts -package ghc
--    hs-source-dirs: src
    main-is:        Main.hs

    build-depends: base                          >= 4    && < 5
                 , mtl                           >= 2.0
                 , ghc-paths                     >= 0.1
                 , containers                    >= 0.3

